# locale-language-manager-Qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: CMakeLists.txt
data/locale/: CMakeLists.txt  demo_eu.ts  demo_fr.ts  demo_zh_CN.ts  demo_zh_TW.ts
doc/: CMakeLists.txt  LlmQtLocaleLanguageManager.html
doc/codeDemo/: CMakeLists.txt  Doxyfile.in
doc/codeLocaleLanguageManager/: CMakeLists.txt  Doxyfile.in  Open_doc.bash
docs/: _llm_qt_locale_language_manager_8h_source.html  annotated.html  class_llm_qt_locale_language_manager-members.html  class_llm_qt_locale_language_manager.html  class_llm_qt_locale_language_manager__coll__graph.map  class_llm_qt_locale_language_manager__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_baec43ed285bf517789525e734f2e156.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/search/: all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt  defines_Demo.h  mainSetUp_Demo.cpp  mainSetUp_Demo.h  main_Demo.cpp
src/localeLanguageManager/: LlmQtLanguage.cpp  LlmQtLanguage.h  LlmQtLocaleLanguageManager.cpp  LlmQtLocaleLanguageManager.h
src/ui/: LanguageChoiceDialog1_Demo.cpp  LanguageChoiceDialog1_Demo.h  LanguageChoiceDialog1_Demo.ui  LanguageChoiceDialog2_Demo.cpp  LanguageChoiceDialog2_Demo.h  LanguageChoiceDialog2_Demo.ui  MainWindow_Demo.cpp  MainWindow_Demo.h  MainWindow_Demo.ui
test/: CMakeLists.txt  LlmQtLanguageTest.cpp  LlmQtLocaleLanguageManager.cpp
test/data/qmFilesBadName/: blabla_ll.qm
